@@ -1,3 +1,8 @@
+Mon May 15 22:30:00 BST 2000 peter@retep.org.uk
+	- Fixed the message Makefile produces after compiling. It still said
+	  about the old Driver class, not the new package. Spotted by
+	  Joseph Shraibman <jks@p1.selectacast.net>
+
 Thu May 04 11:38:00 BST 2000 petermount@it.maidstone.gov.uk
 	- Corrected incorrect date in CHANGELOG
 	- Fixed the ImageViewer example
